# oop_excercise_3

./: CMakeLists.txt  Vertex.cpp  Vertex.h  figure.cpp  figure.h  figures.cpp  figures.h  main.cpp  report_03.docx
